2004-03-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_link_tasks): Hm, I
	could have sworn that this worked before. Reverse the list to get
	the right order when linking.

	* data/glade/add-predecessor.glade: Up the limits to very low/high
	numbers.

2004-03-15  Richard Hult  <richard@imendio.com>

	* docs/sql/README: Tweak the instructions.

	* Add short name for resources. Fixes bug #132345, based on patch
	from Lincoln Phipps. Also fix a few memory leaks while at it.
	
2004-03-15  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c (planner_gantt_print_data_new): Patch
	from Heath Wilkinson to fix bug #137204.

	* src/Makefile.am:
	* src/planner-gantt-chart.c: (gantt_chart_insert_task),
	(planner_gantt_chart_get_view), (planner_gantt_chart_set_view),
	(planner_gantt_chart_get_highlight_critical_tasks):
	* src/planner-gantt-chart.h:
	* src/planner-gantt-row.c: (gantt_row_event),
	(planner_gantt_row_init_menu):
	* src/planner-gantt-row.h:
	* src/planner-gantt-view.c: (gantt_view_create_widget),
	(gantt_view_update_zoom_sensitivity):
	* src/planner-task-tree.c: (task_tree_init),
	(task_tree_tree_view_popup_menu): Commit patch from Chris Ladd
	<caladd@particlestorm.net> to fix bug #129149.

2004-03-13  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2004-03-10	Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS.

2004-02-27  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-view.c: (get_name): Implement so we don't get
	weird errors when trying to print.

2004-02-26  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-application.c: (imrp_application_id_set_data):
	* libplanner/mrp-application.h:
	* libplanner/mrp-private.h: Fix a few warnings.

	* src/planner-sql-plugin.c (sql_plugin_retrieve_db_values): Don't
	set NULL strings as gconf values.

2004-02-17  Alvaro del Castillo  <acs@barrapunto.com>
	