@@ -250,7 +250,7 @@
 		      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 		      <property name="snap_to_ticks">False</property>
 		      <property name="wrap">False</property>
-		      <property name="adjustment">1 0 100 1 10 10</property>
+		      <property name="adjustment">0 0 100 10 25 25</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
